@@ -21,6 +21,9 @@ Version 1.11.0-svn:
    * Deprecated flowers (Ggf) and Volcano (Qv) terrains removed.
      Use Gg^Ef and Mv respectively.
 
+ * User interface:
+   * Restored leader unit image in Load Game dialog (bug #18683)
+
  * Whiteboard
    * Fixed bug #19369 : Using planning mode can cause losing ability to move my units
    * Fixed bug #19408 : Crash shortly after executing invalid multi-turn move
