@@ -35,6 +35,8 @@ Version 1.11.0-svn:
      advancement to Great Wolves and Direwolves
    * New extra_define ENABLE_TROLL_SHAMAN to optionally enable Troll Whelps
      advancement to Troll Shamans (not in multiplayer)
+ * User interface:
+   * Restored leader unit image in Load Game dialog (bug #18683)
  * Whiteboard
    * Fixed bug #19369 : Using planning mode can cause losing ability to move my units
    * Fixed bug #19408 : Crash shortly after executing invalid multi-turn move
